tests/compiler/errors/propagate_error_bad_type.casa
# expect: UNDEFINED_NAME

fn bad -> int {
    42 ?
}
